src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__generic_function.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 11,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 12,
                                            end: 13,
                                            start_line: 1,
                                            start_col: 13,
                                        },
                                    },
                                    bounds: [],
                                    span: Span {
                                        start: 12,
                                        end: 13,
                                        start_line: 1,
                                        start_col: 13,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 11,
                            end: 14,
                            start_line: 1,
                            start_col: 12,
                        },
                    },
                ),
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 3,
                                    },
                                    span: Span {
                                        start: 15,
                                        end: 16,
                                        start_line: 1,
                                        start_col: 16,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 15,
                                end: 16,
                                start_line: 1,
                                start_col: 16,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 18,
                                                    end: 19,
                                                    start_line: 1,
                                                    start_col: 19,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 18,
                                        end: 19,
                                        start_line: 1,
                                        start_col: 19,
                                    },
                                },
                            ),
                            span: Span {
                                start: 18,
                                end: 19,
                                start_line: 1,
                                start_col: 19,
                            },
                        },
                        span: Span {
                            start: 15,
                            end: 19,
                            start_line: 1,
                            start_col: 16,
                        },
                    },
                ],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 24,
                                                end: 25,
                                                start_line: 1,
                                                start_col: 25,
                                            },
                                        },
                                        args: None,
                                    },
                                ],
                                span: Span {
                                    start: 24,
                                    end: 25,
                                    start_line: 1,
                                    start_col: 25,
                                },
                            },
                        ),
                        span: Span {
                            start: 24,
                            end: 25,
                            start_line: 1,
                            start_col: 25,
                        },
                    },
                ),
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Path(
                                    ExprPath {
                                        segments: [
                                            ExprPathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 3,
                                                    },
                                                    span: Span {
                                                        start: 28,
                                                        end: 29,
                                                        start_line: 1,
                                                        start_col: 29,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 28,
                                            end: 29,
                                            start_line: 1,
                                            start_col: 29,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 28,
                                    end: 29,
                                    start_line: 1,
                                    start_col: 29,
                                },
                            },
                        ),
                        span: Span {
                            start: 26,
                            end: 31,
                            start_line: 1,
                            start_col: 27,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 31,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 31,
        start_line: 1,
        start_col: 1,
    },
}
