src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__generic_impl.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Impl(
            ImplBlock {
                attrs: [],
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 1,
                                        },
                                        span: Span {
                                            start: 5,
                                            end: 6,
                                            start_line: 1,
                                            start_col: 6,
                                        },
                                    },
                                    bounds: [],
                                    span: Span {
                                        start: 5,
                                        end: 6,
                                        start_line: 1,
                                        start_col: 6,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 4,
                            end: 7,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                ),
                trait_ty: None,
                self_ty: Type {
                    kind: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 8,
                                            end: 17,
                                            start_line: 1,
                                            start_col: 9,
                                        },
                                    },
                                    args: Some(
                                        TypeArgs {
                                            args: [
                                                Type(
                                                    Type {
                                                        kind: Path(
                                                            TypePath {
                                                                segments: [
                                                                    TypePathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 1,
                                                                            },
                                                                            span: Span {
                                                                                start: 18,
                                                                                end: 19,
                                                                                start_line: 1,
                                                                                start_col: 19,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 18,
                                                                    end: 19,
                                                                    start_line: 1,
                                                                    start_col: 19,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 18,
                                                            end: 19,
                                                            start_line: 1,
                                                            start_col: 19,
                                                        },
                                                    },
                                                ),
                                            ],
                                            span: Span {
                                                start: 17,
                                                end: 20,
                                                start_line: 1,
                                                start_col: 18,
                                            },
                                        },
                                    ),
                                },
                            ],
                            span: Span {
                                start: 8,
                                end: 20,
                                start_line: 1,
                                start_col: 9,
                            },
                        },
                    ),
                    span: Span {
                        start: 8,
                        end: 20,
                        start_line: 1,
                        start_col: 9,
                    },
                },
                where_clause: None,
                items: [
                    Function(
                        FnDecl {
                            attrs: [],
                            vis: Private,
                            qualifiers: FnQualifiers {
                                is_const: false,
                                is_async: false,
                                is_unsafe: false,
                            },
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 3,
                                },
                                span: Span {
                                    start: 26,
                                    end: 29,
                                    start_line: 1,
                                    start_col: 27,
                                },
                            },
                            type_params: None,
                            params: [
                                Param {
                                    qualifier: None,
                                    pattern: Pattern {
                                        kind: Ident {
                                            by_ref: false,
                                            mutable: false,
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 4,
                                                },
                                                span: Span {
                                                    start: 30,
                                                    end: 33,
                                                    start_line: 1,
                                                    start_col: 31,
                                                },
                                            },
                                            subpattern: None,
                                        },
                                        span: Span {
                                            start: 30,
                                            end: 33,
                                            start_line: 1,
                                            start_col: 31,
                                        },
                                    },
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 1,
                                                            },
                                                            span: Span {
                                                                start: 35,
                                                                end: 36,
                                                                start_line: 1,
                                                                start_col: 36,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 35,
                                                    end: 36,
                                                    start_line: 1,
                                                    start_col: 36,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 35,
                                            end: 36,
                                            start_line: 1,
                                            start_col: 36,
                                        },
                                    },
                                    span: Span {
                                        start: 30,
                                        end: 36,
                                        start_line: 1,
                                        start_col: 31,
                                    },
                                },
                            ],
                            return_type: Some(
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 5,
                                                        },
                                                        span: Span {
                                                            start: 41,
                                                            end: 45,
                                                            start_line: 1,
                                                            start_col: 42,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 41,
                                                end: 45,
                                                start_line: 1,
                                                start_col: 42,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 41,
                                        end: 45,
                                        start_line: 1,
                                        start_col: 42,
                                    },
                                },
                            ),
                            effects: None,
                            spec_clauses: [],
                            where_clause: None,
                            body: Some(
                                Block {
                                    statements: [],
                                    expr: Some(
                                        Expr {
                                            kind: Record {
                                                path: Some(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 2,
                                                                    },
                                                                    span: Span {
                                                                        start: 48,
                                                                        end: 57,
                                                                        start_line: 1,
                                                                        start_col: 49,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 48,
                                                            end: 57,
                                                            start_line: 1,
                                                            start_col: 49,
                                                        },
                                                    },
                                                ),
                                                fields: [
                                                    RecordExprField {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 60,
                                                                end: 63,
                                                                start_line: 1,
                                                                start_col: 61,
                                                            },
                                                        },
                                                        value: None,
                                                        span: Span {
                                                            start: 60,
                                                            end: 63,
                                                            start_line: 1,
                                                            start_col: 61,
                                                        },
                                                    },
                                                ],
                                                base: None,
                                            },
                                            span: Span {
                                                start: 48,
                                                end: 65,
                                                start_line: 1,
                                                start_col: 49,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 46,
                                        end: 67,
                                        start_line: 1,
                                        start_col: 47,
                                    },
                                },
                            ),
                            span: Span {
                                start: 23,
                                end: 67,
                                start_line: 1,
                                start_col: 24,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 69,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 69,
        start_line: 1,
        start_col: 1,
    },
}
